<resources>
    <string name="app_name">sofra</string>
    <string name="food_order">طلب طعام</string>
    <string name="food_bay">بيع طعام</string>
    <string name="email">البريد الالكترونى</string>
    <string name="click">ليس لديك حساب !اضغط هنا</string>
    <string name="forget">هل نسيت كلمة السر</string>
    <string name="name">الاسم</string>
    <string name="phone">الجوال</string>
    <string name="city">المدينة</string>
    <string name="gavernment">الحى</string>
    <string name="password">كلمة المرور</string>
    <string name="verify_pass">اعادة كلمة المرور</string>
    <string name="register">تسجيل</string>
    <string name="tips">: رسوم التوصيل</string>
    <string name="butten">متابعه</string>
    <string name="minimum_order">الحد الادنى للطلب</string>
    <string name="time">مدة التوصيل</string>
    <string name="restaurent_name">اسم المطعم</string>
    <string name="text_data">بيانات التواصل</string>
    <string name="whates">صورة المتجر</string>
    <string name="pin_code">الكود</string>
    <string name="title_activity_home_cycle">HomeCycleActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="region">region</string>
    <string name="state">state</string>
    <string name="connnection_data">connnection data</string>
    <string name="new_offer">جديد العروض</string>
    <string name="all">الكل</string>
    <string name="chicken">فراير</string>
    <string name="desert">حلويات</string>
    <string name="petzza">بيترا</string>
    <string name="comment">يسعدنا مشاركتك بتعليق او تقييم</string>
    <string name="add_comment">اضف تعليق او تقييم</string>
    <string name="confirm">تاكيدالاستلام x</string>
    <string name="aderss">العنوان:</string>
    <string name="orderNum">رقم الطلب:</string>
    <string name="total">الاجمالى:</string>
    <string name="confirm2">تاكيد التوصيل</string>
    <string name="cancel">الغاء x</string>
    <string name="order2">الطلب مكتمل</string>
    <string name="المزيد">المزيد</string>
    <string name="connectUs">تواصل معنا</string>
    <string name="offer">العروض</string>
    <string name="aboutApp">عن التطبيق</string>
    <string name="changPass">تغيير كلمة السر</string>
    <string name="exit">تسجيل خروج</string>
    <string name="comments">التعليقات و التقييم</string>
    <string name="التصنيف">صورة التصنيف</string>
    <string name="categoryName">اسم التصنيف</string>
    <string name="update">تعديل</string>
    <string name="allName">الاسم كاملا</string>
    <string name="massege">ماهى رسالتك؟</string>
    <string name="complaint">شكوى</string>
    <string name="suggestion">اقتراح</string>
    <string name="inquiry">استعلام</string>
    <string name="send">ارسال</string>
    <string name="cahng">تغيير</string>
    <string name="old_pass">كلمة المرور القديمة</string>
    <string name="new_pass">كلمةالمرور الجديدة</string>
    <string name="confirm_pass">تأكيد كلمة المرور</string>
    <string name="newOffrers">جديد العروض</string>
    <string name="details">التفاصيبل</string>
    <string name="offerDetails">تفاصيل العرض</string>
    <string name="from">من</string>
    <string name="to">الى</string>
    <string name="addNewOffer">اضافة صورة للعرض</string>
    <string name="add">اضف</string>
    <string name="offerImage">صورة للعرض</string>
    <string name="stateRes">الحاله</string>
    <string name="quantity">الكميه</string>
    <string name="x">x</string>
    <string name="totai">: المجموع الكلى</string>
    <string name="confirmOrder">تأكيد الطلب</string>
    <string name="addMore">اضافة المزيد</string>
    <string name="orderDetails">تفاصيل الطلب</string>
    <string name="adress">عنوان التوصيل</string>
    <string name="bayment">الدفع</string>
    <string name="cash">نقدا عند الاستلام</string>
    <string name="online">الدفع اونلاين</string>
    <string name="total2">: المجموع</string>
</resources>
