<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/clint_more_fragment_tv_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/المزيد"
        android:textStyle="bold"
        android:textSize="@dimen/dim_20sp"
        android:layout_marginTop="@dimen/dim_20dp"
        android:textColor="@color/colorAccent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dim_20dp"
        android:layout_below="@id/clint_more_fragment_tv_text"
        android:layout_marginStart="@dimen/dim_10dp"
        android:layout_marginEnd="@dimen/dim_10dp">
        <TextView
            android:id="@+id/clint_more_fragment_tv_offer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tv_more_style"
            android:text="@string/offer"
            android:drawableStart="@drawable/ic_offer"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/album_dp_1"
            android:background="@color/dark_gray"
            android:layout_marginTop="@dimen/dim_10dp"/>
        <TextView
            android:id="@+id/clint_more_fragment_tv_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tv_more_style"
            android:text="@string/connectUs"
            android:drawableStart="@drawable/ic_email2"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/album_dp_1"
            android:background="@color/dark_gray"
            android:layout_marginTop="@dimen/dim_10dp"/>
        <TextView
            android:id="@+id/clint_more_fragment_tv_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tv_more_style"
            android:text="@string/aboutApp"
            android:drawableStart="@drawable/ic_about"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/album_dp_1"
            android:background="@color/dark_gray"
            android:layout_marginTop="@dimen/dim_10dp"/>
        <TextView
            android:id="@+id/clint_more_fragment_tv_chang_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tv_more_style"
            android:text="@string/changPass"
            android:drawableStart="@drawable/ic_lock2"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/album_dp_1"
            android:background="@color/dark_gray"
            android:layout_marginTop="@dimen/dim_10dp"/>
        <TextView
            android:id="@+id/clint_more_fragment_tv_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tv_more_style"
            android:text="@string/exit"
            android:drawableStart="@drawable/ic_exit"/>

    </LinearLayout>
</RelativeLayout>