<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <TextView
        android:id="@+id/login_fragment_tv_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="تسجيل الدخول"
        style="@style/text1_style"/>

    <EditText
        android:id="@+id/login_fragment_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_fragment_tv_text"
        android:hint="@string/email"

        style="@style/et1_style"
        android:drawableEnd="@drawable/ic_email_icon"
        />

    <ImageView
        style="@style/iv2_white_line"
        android:layout_below="@id/login_fragment_et_email"
        android:layout_marginTop="@dimen/dim_4dp" />

    <EditText
        android:id="@+id/login_fragment_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_fragment_et_email"
        android:hint="@string/password"
        style="@style/et1_style"
        android:drawableEnd="@drawable/ic_password" />

    <ImageView
        style="@style/iv2_white_line"
        android:layout_below="@id/login_fragment_et_email"
        android:layout_marginTop="@dimen/dim_65dp" />
    <TextView
        android:id="@+id/login_fragment_tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/dim_16dp"
        android:layout_marginStart="@dimen/dim_30dp"
        android:layout_below="@id/login_fragment_et_password"/>
    <Button
        android:id="@+id/login_fragment_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_fragment_tv_forget_password"
        style="@style/btn1_style"
        android:text="دخول"/>
    <Button
        android:id="@+id/login_fragment_register_clint"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:background="@color/color"
        android:text="@string/click"
        android:textColor="@color/white"
         />

</RelativeLayout>