<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/information_fragment_ll_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/linear_information_style">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tv_more_style"
            android:text="@string/stateRes"/>
        <TextView
            android:id="@+id/information_fragment_tv_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tv_more_style"
            android:layout_marginStart="@dimen/dim_50dp"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/information_fragment_iv_state"
        style="@style/iv_information_line"
        android:layout_below="@id/information_fragment_ll_linear"/>
    <LinearLayout
        android:id="@+id/information_fragment_ll_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/linear_information_style"
        android:layout_below="@id/information_fragment_iv_state">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tv_more_style"
            android:text="@string/city"/>
        <TextView
            android:id="@+id/information_fragment_tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tv_more_style"
            android:layout_marginStart="@dimen/dim_50dp"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/information_fragment_iv_city"
        style="@style/iv_information_line"
        android:layout_below="@id/information_fragment_ll_city"/>

    <LinearLayout
        android:id="@+id/information_fragment_ll_region"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/linear_information_style"
        android:layout_below="@id/information_fragment_iv_city">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tv_more_style"
            android:text="@string/gavernment"/>
        <TextView
            android:id="@+id/information_fragment_tv_region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tv_more_style"
            android:layout_marginStart="@dimen/dim_50dp"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/information_fragment_iv_region"
        style="@style/iv_information_line"
        android:layout_below="@id/information_fragment_ll_region"/>

    <LinearLayout
        android:id="@+id/information_fragment_ll_min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/linear_information_style"
        android:layout_below="@id/information_fragment_iv_region">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tv_more_style"
            android:text="@string/minimum_order"/>
        <TextView
            android:id="@+id/information_fragment_tv_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tv_more_style"
            android:layout_marginStart="@dimen/dim_50dp"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/information_fragment_iv_min"
        style="@style/iv_information_line"
        android:layout_below="@id/information_fragment_ll_min"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/information_fragment_iv_min"
        style="@style/linear_information_style">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tv_more_style"
            android:text="@string/tips"/>
        <TextView
            android:id="@+id/information_fragment_tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tv_more_style"
            android:layout_marginStart="@dimen/dim_50dp"/>
    </LinearLayout>

</RelativeLayout>